# BidSystem

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  alembic.ini  pyproject.toml  新建 DOC 文档.doc
backend/: .env.example  .gitignore  README.md  compose.yaml
backend/src/bid_system/: __init__.py
backend/src/bid_system/agent_runtime/: __init__.py
backend/src/bid_system/agent_runtime/context/: __init__.py  builder.py  history.py  run.py  token_counter.py  truncator.py
backend/src/bid_system/agent_runtime/core/: __init__.py  agent.py  lifecycle.py  llm.py  streaming.py
backend/src/bid_system/agent_runtime/observability/: __init__.py  events.py  metrics.py  traces.py
backend/src/bid_system/agent_runtime/sessions/: __init__.py  checkpoints.py  store.py
backend/src/bid_system/agent_runtime/skills/: __init__.py  loader.py  manifest.py
backend/src/bid_system/agent_runtime/tools/: __init__.py  base.py  circuit_breaker.py  executor.py  registry.py  response.py
backend/src/bid_system/bootstrap/: __init__.py  container.py  dependencies.py  identity.py  lifecycle.py  logging.py  settings.py
backend/src/bid_system/entrypoints/: __init__.py
backend/src/bid_system/entrypoints/api/: __init__.py  app.py  dependencies.py  exception_handlers.py  responses.py  router.py
backend/src/bid_system/modules/: __init__.py
backend/src/bid_system/orchestration/: __init__.py
backend/src/bid_system/platform/: __init__.py
backend/src/bid_system/shared/: __init__.py
backend/tests/contract/: test_api_contracts.py  test_serialization_contracts.py
backend/tests/integration/: conftest.py
backend/tests/unit/: test_package_layout.py
backend/tests/unit/agent_runtime/: test_architecture.py
backend/tests/unit/bootstrap/: test_container.py  test_dependencies.py  test_lifecycle.py  test_logging.py  test_settings.py
backend/tests/unit/orchestration/: test_orchestration_architecture.py
backend/typings/celery/: __init__.pyi
backend/typings/kombu/: __init__.pyi
deploy/: backend.Dockerfile  compose.yaml
deploy/docker/clamav/: clamd.conf
docs/: PROJECT_MEMORY.md  module-layout.md  基础层搭建顺序.md
docs/architecture/: module-layout.md
migrations/: env.py
migrations/versions/: 20260722_0001_create_platform_outbox.py  20260722_0002_create_identity_security_tables.py  20260722_0003_create_platform_task_execution.py  20260723_0004_seed_identity_roles.py  20260723_0005_drop_platform_task_execution.py  20260723_0006_create_documents.py  20260723_0007_remove_document_tenant_scope.py
(+209 files in other folders)
