[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "bid-system"
version = "0.1.0"
description = "Modular monolith backend for the bid agent platform."
readme = "backend/README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.14,<2",
    "celery[redis]>=5.6,<6",
    "fastapi>=0.115,<1",
    "httpx>=0.28,<1",
    "minio>=7.2,<8",
    "pwdlib[argon2]>=0.3,<1",
    "pyjwt[crypto]>=2.10,<3",
    "opentelemetry-api>=1.30,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.30,<2",
    "opentelemetry-sdk>=1.30,<2",
    "pypdf>=6.0,<7",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.7,<3",
    "python-multipart>=0.0.20,<1",
    "redis>=5,<7",
    "scalar-fastapi>=1.8,<2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
bid-system-worker = "bid_system.entrypoints.worker.app:main"
bid-system-worker-health = "bid_system.entrypoints.worker.app:healthcheck"

[project.optional-dependencies]
dev = [
    "mypy>=1.18,<2",
    "pre-commit>=4.6,<5",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=7,<8",
    "ruff>=0.15,<1",
]

[tool.setuptools]
package-dir = { "" = "backend/src" }

[tool.setuptools.packages.find]
where = ["backend/src"]
include = ["bid_system*"]
namespaces = false

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["backend/src", "backend/tests"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
pythonpath = ["backend/src"]
testpaths = ["backend/tests"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["bid_system"]

[tool.coverage.paths]
source = [
    "backend/src/bid_system",
    "*/site-packages/bid_system",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = ["backend/src", "backend/typings"]
files = ["backend/src", "backend/tests"]
pretty = true
show_error_codes = true
show_error_context = true
warn_unreachable = true
